--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,23 @@
 @import "tailwindcss";
+
+
+
+@layer utilities {
+  @keyframes hackerBackground {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+
+  .bg-hacker {
+    background: linear-gradient(270deg, #000000, #434343);
+    background-size: 400% 400%;
+    animation: hackerBackground 10s ease infinite;
+  }
+}
